Image/test/test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: employee
  namespace: app
spec:
  selector:
    app: employee
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: token
  namespace: app
spec:
  selector:
    app: token
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  type: NodePort
